# PyperCache

./: .gitignore  LICENSE  MANIFEST.in  README.md  cache_module_demo.ipynb  pyproject.toml  requirements-dev.txt
.agents/skills/create-apiwrapper/: SKILL.md
.agents/skills/create-apiwrapper/references/: pypercache-feature-guide.md  pypercache-wrapper-patterns.md
.github/workflows/: static.yml
PyperCache/: __init__.py
PyperCache/core/: __init__.py  cache.py  cache_record.py  request_logger.py
PyperCache/models/: apimodel.py
PyperCache/query/: __init__.py  json_injester.py
PyperCache/storage/: __init__.py  backends.py  base.py  chunked_dictionary.py  factory.py  sqlite_storage.py
PyperCache/utils/: __init__.py  collections.py  sentinel.py  serialization.py  typing_cast.py
apiwrapper-skill/: SKILL.md
apiwrapper-skill/references/: post-build-review.md
docs/: API_WRAPPER.md  CACHE.md  DOCS.md  QUERY.md  README.md  STORAGE.md  docs-index.html  index.html  pypercache-docs.html
docs/api-builders/: README.md  typed-models.md  using-api-wrapper.md  using-building-blocks.md
docs/cache-users/: README.md  serialize-your-data.md  storage-backends.md
docs/docsgen_source/: ATLAS_DOCS_FORMAT.md  index.html
docs/docsgen_source/atlas/: assets.md  metadata.md  navigation.md
docs/docsgen_source/atlas/content/: api-wrapper.md  building-blocks.md  cache-basics.md  json-injester.md  overview.md  ref-apimodel.md  ref-apiwrapper.md  ref-cache.md  ref-storage.md  selector-guide.md  storage-backends.md  tutorial-jsonplaceholder.md  typed-models.md
docs/json-injester-users/: README.md  selector-guide.md
docs/reference/: README.md  api-wrapper.md  apimodel.md  building-blocks.md  cache.md  index.md  json-injester.md  storage-and-logging.md  storage-backends.md  typed-models.md
examples/jsonplaceholder_api/: README.md  app.py  jsonplaceholder_wrapper.py
examples/news_api/: README.md  app.py  newsapi_wrapper.py
examples/poke_api/: README.md  app.py  pokeapi_wrapper.py  requirements.txt
examples/weather_api/: README.md  app.py  openmeteo_wrapper.py
notebooks/: apimodel_deep_sample.json  apimodel_exploration.ipynb  cache_module_demo.ipynb
pypercache/: __init__.py
pypercache-docs/: APIMODEL.md  QUERY.md  STORAGE.md
pypercache-docs/website/: index.html  styles.css
pypercache/api_wrapper/: __init__.py  base.py
pypercache/core/: __init__.py  cache.py  cache_record.py  request_logger.py
pypercache/models/: apimodel.py  field_transforms.py  fields.py  lazy.py  lazy_descriptor.py  validation.py
pypercache/query/: json_injester.py
pypercache/storage/: backends.py  base.py  chunked_dictionary.py  factory.py  sqlite_storage.py
pypercache/utils/: __init__.py  fs.py  patterns.py  profiling.py  serialization.py  typing_cast.py
test-caches/: api-cache.db-shm  api-cache.db-wal
tests/: conftest.py  test_api_wrapper.py  test_apimodel.py  test_apimodel_columns.py  test_cache.py  test_cache_record.py  test_json_injester.py  test_newsapi_example.py  test_patterns.py  test_request_logger.py  test_sentinel.py  test_serialization.py  test_sqlite_storage.py  test_storage.py
