[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypercache"
version = "0.2.0"
description = "Durable file-backed caching for JSON-like data with pluggable storage backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Brandon Bahret", email = "brandonbahret@gmail.com"},
]
maintainers = [
    {name = "Brandon Bahret", email = "brandonbahret@gmail.com"},
]
keywords = ["cache", "persistence", "json", "pickle", "sqlite", "storage", "api-wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lark>=1.1.0",
    "jsonpickle>=3.0.0",
    "msgpack>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/BrandonBahret/PyperCache"
Documentation = "https://brandonbahret.github.io/PyperCache/docs-index.html"
Source = "https://github.com/BrandonBahret/PyperCache"
Repository = "https://github.com/BrandonBahret/PyperCache"
Issues = "https://github.com/BrandonBahret/PyperCache/issues"
Changelog = "https://github.com/BrandonBahret/PyperCache/blob/master/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pypercache*"]

[tool.setuptools.package-data]
pypercache = ["py.typed"]
